# lbm-sim-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  LatticeBoltzmannDemo.py  README.md  main.py  pylock.toml  pyproject.toml
.continue/rules/: CONTINUE.md
